Changes made to list
Done Changes

--- a/Web.config
+++ b/Web.config
@@ -59,6 +59,12 @@
       </providers>
     </sessionState>
   <customErrors mode="Off" />
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+    </webServices>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
